Code from author for "about" page

--- a/code/video/templates/movies/about.html
+++ b/code/video/templates/movies/about.html
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
-<h1>About My Fav Movies</h1>
-<p>
-    A Django application to list my 
-    favorite movies.
-</p>
-</body>
+<h1>I like action movies.</h1>
 </html>
