--- a/code/video/templates/movies/index.html
+++ b/code/video/templates/movies/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <body>
         <div>
-            <a href="">Fav Movies</a>
-            <a href="/about">About</a>
+            <a href="{% url 'home' %}">Fav Movies</a>
+            <a href="{% url 'about' %}">About</a>
         </div>
         <h1>My Fav Movies!</h1>
         {% if movies %}
