--- a/code/video/templates/movies/about.html
+++ b/code/video/templates/movies/about.html
@@ -1,4 +1,8 @@
+{%  extends 'movies/_base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
-<h1>I like action movies.</h1>
+    {% block content %}
+        <h1>I like action movies.</h1>
+    {% endblock content %}
 </html>
