--- a/code/job_board/job_board/templates/job_board/index.html
+++ b/code/job_board/job_board/templates/job_board/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+
+{% load humanize %}
+
 <html lang="en">
     <ul>
         {% for posting in job_postings %}
             <li>
-                {{ posting.title }} | {{ posting.description }} | ${{ posting.salary }}
+                {{ posting.title|title }} | {{ posting.description|capfirst }} | ${{ posting.salary|intcomma }}
             </li>
         {% endfor %}
     </ul>
