--- a/code/job_board/job_board/templates/job_board/detail.html
+++ b/code/job_board/job_board/templates/job_board/detail.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
+{% extends 'job_board/_base.html' %}
+{% load humanize %}
 
-<html lang="en">
-    <ul>
-        <li>{{ posting.title }}</li>
-        <li>{{ posting.company }}</li>
-        <li>${{ posting.salary }}</li>
-        <li>
-            Active? {{ posting.is_active }}
-            <hr/>
-        </li>
-        <li>{{ posting.description }}</li>
-    </ul>
-</html>
+{% block content %}
+    <div class="w-10/12 mx-auto">
+        <p class="pb-6">
+            <a href="{% url 'home' %}"
+               class="border border-gray-400 rounded px-4 py-2 hover:bg-gray-200">
+                Go Back
+            </a>
+        </p>
+        <h1 class="text-3xl font-semibold pb-4 underline underline-offset-8">{{ posting.title|title }}</h1>
+        <p class="pb-2 text-xl">Company: {{ posting.company|title }}</p>
+        <p class="pb-2 font-semibold">Salary: ${{ posting.salary|intcomma }}</p>
+        <p>Description: {{ posting.description|capfirst }}</p>
+
+    </div>
+{% endblock content %}
